--- a/compton.conf
+++ b/compton.conf
@@ -38,6 +38,7 @@ shadow-exclude = [
  "n:e:Notification",
  "n:e:Plank",
  "n:e:Docky",
+ "n:e:Whisker Menu",
  "g:e:Synapse",
  "g:e:Kupfer",
  "g:e:Conky",
